--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Neumatic-Gothic-Bold';
+  src: url('../fonts/NeumaticGothic-Bold.eot');
+  src: url('../fonts/NeumaticGothic-Bold.eot') format('embedded-opentype'),
+    url('../fonts/NeumaticGothic-Bold.woff2') format('woff2'),
+    url('../fonts/NeumaticGothic-Bold.woff') format('woff'),
+    url('../fonts/NeumaticGothic-Bold.ttf') format('truetype');
+//  src: url('#{$fa-font-path}/FontAwesome.otf') format('opentype'); // used when developing fonts
+  font-weight: bold;
+  font-style: normal;
+}
+
 @import "theme/theme_variables";  // <-------- Add your variables into this file. Also add variables to overwrite Bootstrap or UnderStrap variables here
 @import "assets/bootstrap4";      // <-------- Loads Bootstrap4
 @import "understrap/understrap";  // <-------- Loads the UnderStrap defaults. Just a few classes to incorporate BS in WP
