--- a/sass/theme/_elements/footer.scss
+++ b/sass/theme/_elements/footer.scss
@@ -3,6 +3,11 @@ footer#colophon {
 	.top {
 		padding-top: 2.2em;
 		padding-bottom: 2.2em;
+		text-align: center;
+		
+		@include media-breakpoint-up(md) {
+			text-align: left;
+		}
 	
 		.logo-wrap {
 			margin-top: 2em;
@@ -19,6 +24,7 @@ footer#colophon {
 			display: flex;
 			align-items: center;
 			margin-bottom: 1em;
+			justify-content: center;
 			
 			@include media-breakpoint-up(md) {
 				margin-bottom: 0;
@@ -39,8 +45,23 @@ footer#colophon {
 		padding-top: 3.4em;
 		padding-bottom: 2.4em;
 		
-		.col {
-			margin-bottom: 2em;
+		.row > div {
+			text-align: center;
+			padding-top: 2em;
+			padding-bottom: .8em;
+			
+			@include media-breakpoint-up(md) {
+				text-align: left;
+			}
+			
+		&.has-tb {
+				border-top: 1px solid $gray;
+				
+				@include media-breakpoint-up(md) {
+					border: 0;
+				}
+				
+			}
 		}
 	
 		h6 {
@@ -51,6 +72,7 @@ footer#colophon {
 		
 		a {
 			color: $black;
+			display: block;
 		}
 		
 		.big-green {
@@ -83,10 +105,31 @@ footer#colophon {
 		font-size: 14px;
 		line-height: 1.428;
 		padding-top: 4em;
-		padding-bottom: 2.25em;
+		padding-bottom: .1em;
+		
+		@include media-breakpoint-up(md) {
+			padding-bottom: 2.25em;
+		}
 		
 		.row {
 			margin-bottom: 1.8em;
+			
+		&.info-policy div {
+			text-align: center;
+			
+			@include media-breakpoint-up(md) {
+				&:nth-child(1) {
+					text-align: right;
+					padding-right: 2px;
+				}
+				&:nth-child(2) {
+					text-align: left;
+					padding-left: 2px;
+				}
+			}
+			
+		}
+			
 		}
 		
 		sub {
