--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -7,10 +7,10 @@
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-  sm: 1140px,
-  md: 1140px,
-  lg: 1140px,
-  xl: 1140px
+  sm: 1180px,
+  md: 1180px,
+  lg: 1180px,
+  xl: 1180px
 ) !default;
 
 // Grid columns
@@ -54,6 +54,7 @@ $spacers: map-merge(
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
+$font-display: Neumatic-Gothic-Bold;
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
@@ -74,12 +75,14 @@ $font-weight-bolder:          bolder !default;
 $font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
 
-$h1-font-size:                $font-size-base * 7.5 !default;
+/*
+$h1-font-size:                $font-size-base * 7.3 !default;
 $h2-font-size:                $font-size-base * 3 !default;
 $h3-font-size:                $font-size-base * 1.5 !default;
 $h4-font-size:                $font-size-base * 1.5 !default;
 $h5-font-size:                $font-size-base * 1.25 !default;
 $h6-font-size:                $font-size-base !default;
+*/
 
 $headings-margin-bottom:      $spacer / 2 !default;
 $headings-font-family:        null !default;
@@ -97,8 +100,6 @@ $nav-tabs-link-hover-border-color:  transparent;
 $nav-tabs-link-active-color:        $black;
 $nav-tabs-link-active-bg:           transparent;
 $nav-tabs-link-active-border-color: transparent;
-
-
 
 
 // Jumbotron
