--- a/sass/theme/_elements/navbar.scss
+++ b/sass/theme/_elements/navbar.scss
@@ -12,6 +12,10 @@
 				justify-content: flex-end;	
 			}
 			
+			#top-menu li {
+				margin: 0 .55em;
+			}
+			
 			#top-menu li a,
 			.routing {
 				font-size: 0.875rem;
@@ -21,6 +25,7 @@
 			.routing {
 				color: $secondary;
 				font-weight: bold;
+				margin: 0 2.4em;
 			}
 			
 		}
@@ -155,16 +160,155 @@
 		
 		&.main-nav {
 			position: relative;
+			padding-bottom: 0;
+			border-bottom: 1px solid $gray;
 			ul {
+				border: 0;
+				border-radius: 0;	
+				
 				li {
+					
+				&:not(:last-child) {
+					margin-right: 3em;
+				}
+					
 					a {
 						font-size: 1.125rem;
 						font-weight: bold;
 						line-height: 1.444;
-					}
+						padding-bottom: 1rem;
+					}					
 				}
+				
+			&.no-subs.dropdown-menu {
+				position: static;
+				display: block;
+			}
+								
 			}
 			
+
+			ul.header-bottom-nav {
+				
+				> li.menu-item-has-children.dropdown {
+					position: static;
+					
+					a.dropdown-toggle {
+						position: relative;
+						&:after {
+							border: 0;
+							content: '';
+						    position: absolute;
+						    z-index: 1;
+						    left: .25em;
+						    right: .5em;
+						    bottom: 0;
+						    height: 6px;
+						    background-color: transparent;
+						}
+					}
+					
+				&.show {
+					a.dropdown-toggle:after {
+						background-color: $primary;
+					}
+				}
+    
+					> ul.dropdown-menu {
+						background-color: $white;
+						flex-wrap: wrap;
+						transform: translateY(-1px);
+						left: 0;
+						right: 0;
+						width: 100%;
+						max-width: 1180px;
+						padding-top: 2.16rem;
+						padding-bottom: 6.95rem;
+					    padding-right: 20px;
+					    padding-left: 20px;
+					    margin-right: auto;
+					    margin-left: auto;
+					    
+					&:before,
+					&:after {
+						content: '';
+						background-color: $white;
+						position: absolute;
+						top: 0;
+						bottom: 0;
+						width: 50vw;
+					}
+					
+					&:before {
+						left: -50vw;
+					}
+
+					&:after {
+						right: -50vw;
+					}
+												
+					&.show {
+						display: flex;
+					}
+					
+						> li,
+						> ul.no-subs.dropdown-menu {
+							flex: 0 0 12.666%;
+							width: 12.666%;
+							white-space: normal;
+						}
+				
+						li {
+							
+							a {
+								
+							&:hover {
+								background-color: transparent;
+							}
+								
+							}
+							
+						&.mega-parent {
+							> a {
+								color: $primary;
+								padding: 0;
+								margin-bottom: .6rem;
+							}
+							
+							ul.dropdown-menu {
+								display: block;
+								position: static;
+								
+								> li {
+									white-space: normal;
+									
+									 a {
+										white-space: normal;
+										font-size: 16px;
+										font-weight: 400;
+										padding: 0;
+										margin-bottom: .6rem;
+									}
+									
+								}	
+								
+							}
+							
+							
+							
+						}
+							
+						}
+						
+					}
+				}
+
+			}
+
+
+
+
+						
 		    .container {
 			    display: block;
 			}
