--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -31,6 +31,14 @@
 @import "theme/_elements/recent-news-blogs";
 @import "theme/_elements/get-started-cta";
 @import "theme/_elements/footer";
+@import "theme/_elements/levels";
+@import "theme/_elements/levels-table";
+@import "theme/_elements/accordion";
+@import "theme/_elements/product-img-text";
+@import "theme/_elements/centered-copy";
+@import "theme/_elements/tabbed-cards";
+@import "theme/_elements/heading-shadow-cards";
+@import "theme/_elements/copy-twocols-img";
 
 // Page Templates
 @import "theme/_pages/home";
