--- a/sass/theme/_elements/copy-twocols-img.scss
+++ b/sass/theme/_elements/copy-twocols-img.scss
@@ -30,17 +30,13 @@
 	
 	.text-wrap {
 		.single-card {
-			margin-bottom: .8em;
+			margin-bottom: .2rem;
 			
 			h3 {
 				line-height: 1;
 				margin-bottom: 0.6em;
 			}
 			
-		}
-		
-		.link-wrap {
-			padding-top: 1.35em;
 		}
 		
 	}
