--- a/sass/theme/_elements/get-started-cta.scss
+++ b/sass/theme/_elements/get-started-cta.scss
@@ -1,8 +1,8 @@
 .get-started-cta {
-	margin-top: 7em;
-	margin-bottom: 2.8em;
-	padding-top: 2.7em;
-    padding-bottom: 1.6em;
+	margin-top: 7rem;
+	margin-bottom: 2.8rem;
+	padding-top: 2.7rem;
+    padding-bottom: 3.15rem;
 	
 	.row.direction {
 		@include media-breakpoint-up(md) {
