--- a/sass/theme/_elements/common.scss
+++ b/sass/theme/_elements/common.scss
@@ -23,6 +23,13 @@ section {
 		padding-bottom: 4.1em;		
 	}
 	
+&.centered-copy {
+	padding-bottom: 0;
+	@include media-breakpoint-up(md) {
+		padding-bottom: 0;
+	}
+}
+	
 }
 
 .max-1240 {
@@ -44,6 +51,11 @@ section {
 
 .bold {
 	font-weight: bold;
+}
+
+a.blue-link {
+	font-weight: bold;
+	color: $secondary;
 }
 
 a:hover {
@@ -69,6 +81,16 @@ a:hover {
 	font-size: 24px;
 }
 
+.display {
+	font-family: $font-display;
+	text-transform: uppercase;
+	color: $primary;
+}
+
+p {
+	margin-bottom: 1.5em;
+}
+
 h1,
 .h1 {
 	font-family: $font-display;
@@ -88,6 +110,10 @@ h2 {
 		font-size: 3rem;
 	}
 	
+&.display {
+	font-size: 5.1rem;
+}
+	
 &.prod-hub {
 	font-size: 5rem;
 	color: $primary;
@@ -105,6 +131,12 @@ h3 {
 	@include media-breakpoint-up(md) {
 		font-size: 1.5rem;
 	}
+	
+&.display {
+	font-size: 4.5rem;
+	line-height: .8333;
+	margin-bottom: .42em;
+}
 	
 }
 
@@ -191,6 +223,10 @@ sup {
 
 
 // Buttons
+.btn-wrap {
+    padding-top: 1.6rem;
+}
+
 button {
 	border: 0;
 	background-color: transparent;
@@ -239,7 +275,7 @@ button {
 .breadcrumb {
 	background-color: transparent;
 	margin: 0;
-	padding-top: 2.4rem;
+	padding: 2.4rem 0 0 0;
 	border-radius: 0;	
 	
 	.breadcrumb-item {
