--- a/sass/theme/_elements/icons-text.scss
+++ b/sass/theme/_elements/icons-text.scss
@@ -1,20 +1,16 @@
-.text-icons {
-	padding-top: 2.6em;
+.icons-text {
+	padding-top: .9em;
 	padding-bottom: 2.55em;
 	
 	@include media-breakpoint-up(md) {
-		padding-top: 4.6em;
+		padding-top: .9em;
 	}
 	
-	h2 {
-		margin-bottom: .33em;
+	h3 {
+		color: $black;
 	}
 	
-	p {
-		margin-bottom: 2.4em;
-	}
-	
-	.ti-card {
+	.it-card {
 		margin-bottom: 40px;
 		
 		.icon-wrap {
