--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -38,6 +38,12 @@
 @import "theme/_elements/tabbed-cards";
 @import "theme/_elements/shadow-cards";
 @import "theme/_elements/copy-twocols-img";
+@import "theme/_elements/rates-tabs";
+@import "theme/_elements/tabbed-icons-text";
+@import "theme/_elements/sidebar-content";
 
 // Page Templates
 @import "theme/_pages/home";
+@import "theme/_pages/news-insights";
+@import "theme/_pages/contact";
+@import "theme/_pages/error404";
