--- a/sass/theme/_elements/product-img-text.scss
+++ b/sass/theme/_elements/product-img-text.scss
@@ -7,8 +7,8 @@
 		margin-bottom: .5em;
 	}
 	
-	.check-list {
-		padding-top: .9em;
+	ul {
+		padding-top: .35rem;
 		
 		li {
 			margin-bottom: 1.6em;
