--- a/sass/theme/_elements/tabbed-cards.scss
+++ b/sass/theme/_elements/tabbed-cards.scss
@@ -1,9 +1,9 @@
 .tabbed-cards {
-	padding-top: 2.5em;
+	padding-top: 0;
 	padding-bottom: 2.5em;
 	
 	@include media-breakpoint-up(md) {
-		padding-top: 4.7em;
+		padding-top: 0;
 		padding-bottom: 5em;			
 	}
 	
