--- a/sass/theme/_elements/common.scss
+++ b/sass/theme/_elements/common.scss
@@ -49,6 +49,20 @@ section {
 	background-position: center center;
 }
 
+.has-sidebar {
+	position: relative;
+		
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: calc(-4.16665% - 18px);
+		width: 2px;
+		background-color: $gray;
+	}
+}
+
 .bold {
 	font-weight: bold;
 }
@@ -81,7 +95,10 @@ a:hover {
 	font-size: 24px;
 }
 
-.display {
+.display,
+h1.display
+h2.display,
+h3.display {
 	font-family: $font-display;
 	text-transform: uppercase;
 	color: $primary;
@@ -103,7 +120,10 @@ h1,
 	}
 }
 
-h2 {
+h2,
+.h2 {
+	font-family: $font-family-base;
+	text-transform: none;
 	font-size: 2.5rem;
 	
 	@include media-breakpoint-up(md) {
@@ -144,6 +164,10 @@ h4 {
 	font-size: 1.5rem;
 }
 
+hr {
+	border-top: 2px solid $gray;
+}
+
 .level-name {
 	h3 {
 		font-size: 48px;
@@ -170,6 +194,10 @@ sup {
 	color: $primary;
 }
 
+.gray-text {
+	color: $gray-text;
+}
+
 // Backround Colors
 .white-bg {
 	background-color: $white;	
@@ -184,6 +212,66 @@ sup {
 	background-color: $light-gray;	
 }
 
+// Pagination
+.pagination {
+	justify-content: center;
+	align-items: center;
+	
+	a.prev,
+	a.next {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: $primary;
+		width: 24px;
+		height: 24px;
+		border-radius: 100%;
+	}
+	
+	a.prev {
+		margin-right: .7rem;
+		svg {
+			position: relative;
+			left: 2px;
+		}
+	}
+
+	a.next {
+		margin-left: .7rem;
+		svg {
+			position: relative;
+			right: 2px;
+		}
+	}
+	
+	li {
+		font-size: 18px;
+		font-weight: bold;
+		display: flex;
+		align-items: center;
+		margin: 10px;
+		position: relative;
+		
+		span.current {
+		position: relative;
+
+		&:after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: -2px;
+			right: -2px;
+			width: calc(100% + 4px);
+			height: 3px;
+			background-color: $primary;
+		}
+		
+		}
+		
+	}
+	
+}
+
 // Box Shadow Cards
 .shadow {
 	box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.1);
@@ -194,31 +282,123 @@ sup {
 }
 
 // Check Lists
-.check-list {
-	ul {
-		list-style: none;
-		padding-left: 1.9em;
+ul {
+	padding-left: 3.4rem;
+	list-style-image: url(../images/green-check.svg);
+	
+	li {
+		padding-left: .3rem;
+		margin-bottom: .6rem;		
+	}
+}
+
+// Sidebar Cards
+.sidebar-card {
+	max-width: 256px;
+	display: inline-block;
+	text-align: left;
+	
+	.text-wrap {
+		padding: 1.25rem 1.25rem .2rem;
 		
-		li {
-			position: relative;
-			padding-left: 1.9em;
-			margin-bottom: .6em;
+		.sidebar-row {
+			margin-bottom: 1rem;
 			
-		&:before {
-			content: '';
-		    display: block;
-		    width: 17px;
-		    height: 13px;
-		    background-image: url(../images/green-check.svg);
-		    position: absolute;
-		    top: 5px;
-		    left: 0;
-		    background-repeat: no-repeat;
-		    background-size: contain;
+			h3 {
+				margin-bottom: .05em;
+			}
+		&:not(:last-child) {
+			border-bottom: 2px solid $gray;
 		}
-			
+		
+		}
+		
+	}
+	
+	.btn-wrap {
+		padding: 0 1.25rem 1.9rem;
+	}
+	
+	.link-wrap {
+		padding-top: .25rem;
+		padding-bottom: 3.55rem;
+	}
+	
+&.testimonial {
+	.prompt {
+		padding: 1.25rem 1.25rem 2.57rem;
+		background-color: $primary;
+		
+		h3 {
+			color: $white;
+		}
+		
+	}
+	
+	.prompt-shape-wrap {
+		display: flex;
+		justify-content: flex-end;
+
+		.prompt-shape {
+			margin-right: 2rem;
+			background-color: $primary;
+			width: 46px;
+			height: 32px;
+			clip-path: polygon(26% 0, 0% 100%, 100% 0);
 		}
 	}
+	
+	.author-wrap {
+		div {
+			color: $primary;
+			font-weight: bold;
+		}
+	}
+	
+}
+
+&.green {
+	background-color: $primary;
+	color: $white;
+	
+	img {
+		display: block;
+	}
+	
+	h3 {
+		color: $white;
+	}
+	
+	.btn-wrap {
+		background-color: #00BC70;
+		padding: 1rem 1.25rem;
+	}
+	
+}
+	
+}
+		
+// Search
+form.search {
+	max-width: 354px;
+	border: 2px solid $gray;
+    border-radius: 24px;
+    height: 48px;
+    display: flex;
+    overflow: hidden;
+    
+	input {
+		width: calc(100% - 52px);
+		border: 0;
+		border-radius: 24px;
+		padding: 1rem;	
+	}
+	
+	button[type="submit"] {
+	    position: relative;
+		right: -10px;
+	}	
+	
 }
 
 
@@ -300,3 +480,7 @@ button {
 	}
 	
 }
+
+
+// Sidebar Pages
+
