--- a/sass/theme/_elements/tabs.scss
+++ b/sass/theme/_elements/tabs.scss
@@ -19,10 +19,11 @@
 			display: block;
 			position: relative;
 			color: $gray-text;
-			font-weight: bold;
+			font-weight: 500;
 			text-transform: uppercase;
 			padding: .75em;
 			margin: 0 1.1em;
+			letter-spacing: .1px;
 			
 		&:after {
 			content: '';
@@ -35,11 +36,17 @@
 			background-color: transparent;
 		}
 			
-		&.active:after {
+		&.active {
+			font-weight: bold;
+			
+		&:after {
 			background-color: $primary;
 		}
 			
 		}
+		
+		}
+		
 	}
 	
 
